<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account.SignUpActivity">

        <TextView
            android:id="@+id/tv_activity_signup_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:padding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/et_activity_signup_fname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/fname"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tv_activity_signup_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_activity_signup_lname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/lname"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/et_activity_signup_fname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!--<EditText-->
        <!--android:id="@+id/et_activity_signup_uname"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="8dp"-->
        <!--android:hint="@string/uname"-->
        <!--android:textSize="20sp"-->
        <!--app:layout_constraintTop_toBottomOf="@id/et_activity_signup_lname"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"/>-->

        <EditText
            android:id="@+id/et_activity_signup_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/email"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/et_activity_signup_lname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_activity_signup_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/et_activity_signup_tel"
            app:layout_constraintEnd_toStartOf="@id/et_activity_signup_tel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_activity_signup_tel" />

        <EditText
            android:id="@+id/et_activity_signup_tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/et_activity_signup_email"
            app:layout_constraintStart_toEndOf="@id/tv_activity_signup_phone"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_activity_signup_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/password"
            android:textSize="20sp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/et_activity_signup_tel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_activity_signup_confirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/et_activity_signup_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!--<EditText-->
        <!--android:id="@+id/et_activity_signup_token"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="8dp"-->
        <!--android:hint="@string/token_from_sms"-->
        <!--android:textSize="20sp"-->
        <!--app:layout_constraintTop_toBottomOf="@id/et_activity_signup_confirmPassword"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--android:inputType="text" />-->

        <TextView
            android:id="@+id/tv_activity_signup_relation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relation"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@id/rg_activity_signup_relation"
            app:layout_constraintTop_toTopOf="@id/rg_activity_signup_relation"
            app:layout_constraintBottom_toBottomOf="@id/rg_activity_signup_relation"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/rg_activity_signup_relation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_activity_signup_relation"
            app:layout_constraintTop_toBottomOf="@id/et_activity_signup_confirmPassword"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mother"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Father"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/ll_activity_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_activity_signup_addToken"
            app:layout_constraintTop_toBottomOf="@id/rg_activity_signup_relation"
            app:layout_constraintBottom_toTopOf="@id/button_activity_signup_signup">

            <EditText
                android:id="@+id/et_activity_signup_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/token_from_sms" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_activity_signup_addToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_box_24dp"
            android:padding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/ll_activity_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ll_activity_signup"
            app:layout_constraintBottom_toBottomOf="@id/ll_activity_signup"/>
        <Button
            android:id="@+id/button_activity_signup_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/register"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintTop_toBottomOf="@id/ll_activity_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>
